--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ div[data-testid="stSidebarNav"] > ul > li > div[aria-selected="true"] {
 
 /* Primary Button */
 .stButton.primary>button {
-    background: linear-gradient(135deg, #814bff, #d04ef8);
+    background: red;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem;
@@ -236,7 +236,7 @@ div[data-testid="stSidebarNav"] > ul > li > div[aria-selected="true"] {
 
 /* Secondary Button */
 .stButton.secondary>button {
-    background: linear-gradient(135deg, #34c2eb, #3498db);
+    background: #FF7F50;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem;
@@ -247,7 +247,7 @@ div[data-testid="stSidebarNav"] > ul > li > div[aria-selected="true"] {
 
 /* Success Button */
 .stButton.success>button {
-    background: linear-gradient(135deg, #2ecc71, #27ae60);
+    background: #DC143C;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem;
@@ -258,7 +258,7 @@ div[data-testid="stSidebarNav"] > ul > li > div[aria-selected="true"] {
 
 /* Danger Button */
 .stButton.danger>button {
-    background: linear-gradient(135deg, #e74c3c, #c0392b);
+    background: #DB7093;
     color: white;
     border: none;
     padding: 0.75rem 1.5rem;
